# Journal-Taming-Cructacean

./: Cargo.toml  README.md  rustfmt.toml
inversion/: Cargo.toml  rustfmt.toml
inversion/data/: Cargo.toml
inversion/data/src/: lib.rs
inversion/model/: Cargo.toml
inversion/model/src/: main.rs
inversion/src/: main.rs
plot/: Cargo.toml
plot/plot-line/: Cargo.toml
plot/plot-line/src/: lib.rs
plot/plotter/: Cargo.toml
plot/plotter/src/: main.rs
plot/src/: main.rs
print/src/: lib.rs
task_1/: README.md
task_1/inversion/: Cargo.toml
task_1/inversion/src/: data.rs
task_1/plot/: Cargo.toml
task_1/plot/src/: main.rs  plot_line.rs
task_1/print/: Cargo.toml
task_2/example/: Cargo.toml
task_2/example/src/: helloworld.rs  helloworld_grpc.rs  lib.rs
task_2/polynomial/: Cargo.toml  build.rs  polynomial.proto
task_2/polynomial/src/: lib.rs  polynomial.rs  polynomial_function.rs  polynomial_grpc.rs  polynomial_plot.rs
task_3/: README.md
task_3/complex/: Cargo.toml
task_3/complex/src/: complex.rs  main.rs
task_3/point/: Cargo.toml
task_3/point/src/: main.rs  point.rs
