[package]
name = "inversion"
version = "0.1.0"
authors = ["mohammedaugie13 <mohammedaugie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
ndarray-linalg = { version = "0.12", features = ["openblas"] }
print = {path = "../print"}