[package]
name = "polynomial"
version = "0.1.0"
authors = ["mohammedaugie13 <mohammedaugie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
httpbis         = "~0.7"
env_logger      = "~0.5"
ndarray = "0.13.0"
plotly = "0.4.1"

[build-dependencies]
protoc-rust-grpc = "0.6.1"


[[bin]]
name = "polynomial_server"
test = false

[[bin]]
name = "polynomial_client"
test = false
